force-app/main/default/objects/Registration_Form__c/Registration_Form__c.object-meta.xml
<CustomObject>
    <label>Registration Form</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>