force-app/main/default/objects/Registration_Form__c/fields/Date_of_registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_registration__c</fullName>
    <label>Date of registration</label>
    <required>true</required>
    <type>Date</type>
</CustomField>