force-app/main/default/objects/Registration_Form__c/fields/Enrolled_in_which_course__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_which_course__c</fullName>
    <label>Enrolled in which course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>DS + ML</fullName>
            </value>
            <value>
                <fullName>Full Stack</fullName>
            </value>
            <value>
                <fullName>Web Designing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>