force-app/main/default/objects/Registration_Form__c/fields/Identity_ID__c.field-meta.xml
<CustomField>
    <fullName>Identity_ID__c</fullName>
    <label>Identity (ID)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar card</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>