force-app/main/default/objects/Registration_Form__c/fields/Local_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_Address__c</fullName>
    <label>Local Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>