force-app/main/default/objects/Registration_Form__c/fields/Parent_s_name__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_name__c</fullName>
    <label>Parent&apos;s name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>