force-app/main/default/objects/Registration_Form__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <displayFormat>R-{0000}</displayFormat>
    <label>Registration Number</label>
    <type>AutoNumber</type>
</CustomField>