force-app/main/default/objects/Registration_Form__c/validationRules/mobile_no_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_no_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Mobile_No__c ) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Mobile_No__c</errorDisplayField>
    <errorMessage>mobile no. should contain 10 digits</errorMessage>
</ValidationRule>