force-app/main/default/objects/Registration_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Registration_Number__c</columns>
    <columns>NAME</columns>
    <columns>Enrolled_in_which_course__c</columns>
    <columns>Course_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>